<resources>
    <string name="app_name">Temperature Conversion</string>
    <string name="unidade">Unit</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="converter">Convert</string>
    <string name="temperaturas">Temperature</string>
    <string name="insira_temperatura_valida">Please enter a valid temperature</string>
    <string name="indique_unidades">Please specify the temperature units</string>
</resources>