<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margemAtividades"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/corLabels"
        android:gravity="center"
        android:padding="@dimen/paddingLabels"
        android:text="@string/temperaturas"
        android:textColor="@color/corTextoLabels" />

    <EditText
        android:id="@+id/editTextTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/corInputs"
        android:ems="10"
        android:hint="@string/temperaturas"
        android:inputType="numberDecimal"
        android:padding="@dimen/paddingCaixasTexto" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacoEntreInputs"
        android:background="@color/corLabels"
        android:gravity="center"
        android:padding="@dimen/paddingCaixasTexto"
        android:text="@string/unidade"
        android:textColor="@color/corTextoLabels" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/corInputs">

        <RadioButton
            android:id="@+id/radioButtonFahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit" />

        <RadioButton
            android:id="@+id/radioButtonCelsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonConverter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacoEntreInputs"
        android:onClick="mostraTemperatura"
        android:text="@string/converter" />

</LinearLayout>